--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   </div>
   
 
-<img src="/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<img src="map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
